force-app/main/default/objects/SubscriptionPlan__c/fields/BillingModel__c.field-meta.xml
<CustomField>
    <fullName>BillingModel__c</fullName>
    <label>Billing Model</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>PayPerUse</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>