force-app/main/default/objects/SubscriptionPlan__c/fields/OverageRatePerMinute__c.field-meta.xml
<CustomField>
    <fullName>OverageRatePerMinute__c</fullName>
    <description>Overage Rate</description>
    <label>Overage Rate Per Minute</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>