force-app/main/default/objects/SubscriptionPlan__c/fields/PlanCode__c.field-meta.xml
<CustomField>
    <fullName>PlanCode__c</fullName>
    <description>Stable plan code.</description>
    <externalId>true</externalId>
    <label>Plan Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>