force-app/main/default/objects/SubscriptionPlan__c/fields/TrialDays__c.field-meta.xml
<CustomField>
    <fullName>TrialDays__c</fullName>
    <description>Default trial duration.</description>
    <label>Trial Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>